Bug 565171 - Wiki page authors red on grey is unreadable

--- a/less/quicksilver/mediawiki/template.less
+++ b/less/quicksilver/mediawiki/template.less
@@ -480,6 +480,10 @@ input[type="text"] , input[type="password"] , input[type="datetime"] , input[typ
   font-size:0.9em;
 }
 
+.featured-footer a.new{
+  color:#FFE1E5;
+}
+
 @media print {
   @import 'print.less';
 }
